# todo_app_actix_mysql

./: .env.example  Cargo.toml
migrations/: 20250527035133_create_users_table.sql  20250527035205_create_todos_table.sql
src/: main.rs
src/config/: database.rs  mod.rs
src/handlers/: auth_handler.rs  todo_handler.rs  user_handler.rs
src/middleware/: auth_middleware.rs  authorization_middleware.rs  mod.rs
src/models/: auth_model.rs  todo_model.rs  user_model.rs
src/routes/: auth_routes.rs  mod.rs  todo_routes.rs  user_routes.rs
src/schema/: mod.rs  todo_schema.rs  user_schema.rs
src/utils/: get_env_vars.rs  mod.rs
