[package]
name = "todo_app_actix_mysql"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "mysql", "macros", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
jsonwebtoken = "9"
bcrypt = "0.15"
actix-identity = "0.5"
actix-session = "0.8"
futures-util = "0.3"
